--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "private": true,
   "dependencies": {
     "@craco/craco": "^6.1.2",
+    "@sanity/block-content-to-react": "^3.0.0",
     "@sanity/client": "^2.11.0",
+    "@sanity/image-url": "^0.140.22",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
@@ -12,6 +14,7 @@
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-spinners": "^0.11.0",
     "styled-components": "^5.3.0",
     "twin.macro": "^2.5.0",
     "web-vitals": "^1.0.1"
